<resources>
    <string name="app_name">MySchool</string>
    <string name="connection">Connection</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="connect">Connect</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">isi@isi.sn</string>
    <string name="formation">Formation</string>
    <string name="university">University</string>
    <string name="help">Help</string>
    <string name="events">Events</string>
    <string name="cancel">Cancel</string>
    <string name="inscription">Inscription</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="degrees">Degrees</string>
    <string name="o_level">O level</string>
    <string name="bachelor">Bachelor</string>
    <string name="master">Master</string>
    <string name="save">Save</string>
    <string name="error_field">Required field</string>
    <string name="error_inscription">Inscription failed</string>
    <string name="success_inscription">Inscription success</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


</resources>