<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/all"
    tools:context=".MainActivity">


    <TextView
        android:textStyle="bold"
        android:textSize="@dimen/title"
        android:gravity="center"
        android:text="@string/connection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/txtLogin"
        android:layout_marginTop="@dimen/top"
        android:hint="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:inputType="textPassword"
        android:id="@+id/txtPassword"
        android:layout_marginTop="@dimen/top"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnConnect"
        android:layout_marginLeft="@dimen/left"
        android:layout_marginRight="@dimen/right"
        android:textColor="@color/white"
        android:backgroundTint="@color/blue_dark"
        android:layout_marginTop="@dimen/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connect"/>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_marginLeft="@dimen/left"
        android:layout_marginRight="@dimen/right"
        android:textColor="@color/white"
        android:backgroundTint="@color/blue_sky"
        android:layout_marginTop="@dimen/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"/>




</LinearLayout>